--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".Detail" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".SettingsActivitya"
             android:label="@string/title_activity_settings"></activity>
     </application>
 
